fix(words): adjust p and img spacing

--- a/src/static/stylesheets/base/display.scss
+++ b/src/static/stylesheets/base/display.scss
@@ -26,7 +26,7 @@ body {
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
   border: 1px solid #ddd;
 }
 
