--- a/src/static/stylesheets/base/typography.scss
+++ b/src/static/stylesheets/base/typography.scss
@@ -68,7 +68,7 @@ blockquote {
 }
 
 p {
-  margin: 1rem 0;
+  margin: 2rem 0;
 }
 
 a {
@@ -105,13 +105,14 @@ h2 {
   font-size: 1.75rem;
   line-height: 1.75rem;
   border-top: 1px solid #ddd;
-  padding-top: 2rem;
+  padding-top: 3rem;
+  margin: 3rem 0;
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.2rem;
-  margin: 1rem 0;
+  margin: 3rem 0;
 }
 
 h4,
